3.1 distribution of responsibilities between services and more info in tasks summary